<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="MissingTranslation">
	<string name="app_name">Emerald Dialer</string>
	
	<!-- NUMPAD LETTERS -->
	<string name="numpad_2_default" translatable="false">ABC</string>
	<string name="numpad_3_default" translatable="false">DEF</string>
	<string name="numpad_4_default" translatable="false">GHI</string>
	<string name="numpad_5_default" translatable="false">JKL</string>
	<string name="numpad_6_default" translatable="false">MNO</string>
	<string name="numpad_7_default" translatable="false">PQRS</string>
	<string name="numpad_8_default" translatable="false">TUV</string>
	<string name="numpad_9_default" translatable="false">WXYZ</string>
	<string name="numpad_2" />
	<string name="numpad_3" />
	<string name="numpad_4" />
	<string name="numpad_5" />
	<string name="numpad_6" />
	<string name="numpad_7" />
	<string name="numpad_8" />
	<string name="numpad_9" />
	<string name="numpad_0" translatable="false">+</string>
	<string name="numpad_star" translatable="false">*</string>
	<string name="numpad_hash" translatable="false">#</string>
	
	<!-- REGEX PATTERNS -->
	<string name="common_regex_0" translatable="false">[0\\ ]</string>
	<string name="common_regex_1" translatable="false">[1\\W]</string>
	<string name="common_regex_2" translatable="false">[2ABCabc]</string>
	<string name="common_regex_3" translatable="false">[3DEFdef]</string>
	<string name="common_regex_4" translatable="false">[4GHIghi]</string>
	<string name="common_regex_5" translatable="false">[5JKLjkl]</string>
	<string name="common_regex_6" translatable="false">[6MNOmno]</string>
	<string name="common_regex_7" translatable="false">[7PQRSpqrs]</string>
	<string name="common_regex_8" translatable="false">[8TUVtuv]</string>
	<string name="common_regex_9" translatable="false">[9WXYZwxyz]</string>

	<!-- Dummy RegEx, replace in values-$LOCALE/strings.xml -->
	<string name="local_regex_0" />
	<string name="local_regex_1" />
	<string name="local_regex_2" />
	<string name="local_regex_3" />
	<string name="local_regex_4" />
	<string name="local_regex_5" />
	<string name="local_regex_6" />
	<string name="local_regex_7" />
	<string name="local_regex_8" />
	<string name="local_regex_9" />

	<string name="regex_star" translatable="false">\\Q*\\E</string>
	<string name="regex_hash" translatable="false">\\Q#\\E</string>
	
	<!-- CALL INFORMATION -->
	<string name="date">Date</string>
	<string name="duration">Duration</string>
	
	<string name="create_contact">Create new contact</string>
	<string name="send_message">Send a message</string>
	<string name="show_info">Call information</string>
	<string name="make_a_call">Call</string>
	<string name="copy_number">Copy number</string>
	<string name="delete_log_entry">Delete log entry</string>
			
	<string name="delete_call_log_entry_question">Do you want to delete this call from the log?</string>
	<string name="contacts_app_is_missing">There is no contacts application installed to save contacts.</string>
	
	<!-- SPEED DIAL -->
	<string name="tap_for_addition">Tap for addition</string>
	<string name="voice_mail">Voice mail</string>
	<string name="remove_speed_dial_entry">Do you want to remove this number?</string>
	<string name="remove">Remove</string>
	<string name="pick_contact_number">Pick contact number</string>
	
	<!-- POPUP MENU -->
	<string name="clear_call_log">Clear call log</string>
	<string name="clear_call_log_question">Do you want to clear the call log?</string>
	<string name="fast_dial">Speed dial</string>
	<string name="dialer_preferences">Preferences</string>
	<string name="dialer_about">About…</string>
	
	<!-- PREFERENCES -->
	<string name="preference_theme">Theme</string>
	<string name="theme_entry_light">Light</string>
	<string name="theme_entry_dark">Dark</string>
	<string name="theme_entry_night">Night</string>
	<string name="theme_entry_amoled" translatable="false">AMOLED</string>

	<string name="preference_t9_locale">T9 Language</string>
	<string name="preference_contact_sources">Contacts\' sources</string>
	<string name="permission_not_granted">Permission not granted for this operation</string>

	<!-- CALL TYPES -->
    <string name="call_type_incoming">Incoming call</string>
	<string name="call_type_missed">Missed call</string>
	<string name="call_type_outgoing">Outgoing call</string>
	<string name="call_type_rejected">Rejected call</string>
	<string name="call_type_other">Other</string>

    <!-- NUMBER CALL LOG ENTRIES REMOVAL DIALOG -->
    <string name="dialog_clean_log_title">Remove log entries</string>
    <string name="dialog_clean_log_from">From:</string>
	<string name="dialog_clean_log_to">To:</string>
    <string name="dialog_clean_log_date">Date:</string>
    <string name="dialog_clean_log_pick_date">Pick date</string>

</resources>
