<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    >
    <TableRow
        android:padding="4dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/from"
            android:text="@string/dialog_clean_log_from"
            />
        <Spinner
            android:id="@+id/spinner_from"
            android:layout_width="0dp"
            android:layout_weight="1"
            />
    </TableRow>
    <TableRow
        android:padding="4dp"
        android:id="@+id/pick_oldest_date_row"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:text="@string/dialog_clean_log_date"
            android:labelFor="@id/btn_pick_date_from"
            />
        <Button
            android:id="@+id/btn_pick_date_from"

            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dialog_clean_log_pick_date"
            />
    </TableRow>
    <TableRow
        android:padding="4dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/to"
            android:text="@string/dialog_clean_log_to"
            android:labelFor="@id/spinner_to"
            />
        <Spinner
            android:id="@+id/spinner_to"
            android:layout_width="0dp"
            android:layout_weight="1"
            />
    </TableRow>
    <TableRow
        android:padding="4dp"
        android:id="@+id/pick_newest_date_row"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:text="@string/dialog_clean_log_date"
            android:labelFor="@id/btn_pick_date_to"
            />
        <Button
            android:id="@+id/btn_pick_date_to"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dialog_clean_log_pick_date"
            />
    </TableRow>

</TableLayout>